modules/sidebar.css
/* === SIDEBAR === */

/* === SIDEBAR - SINGLE TOOLBAR === */

#titlebar:before{
  border-radius: var(--na-user-border-radius) !important;
}

#titlebar{
  border-radius: var(--na-user-border-radius) !important;
}

.zen-toolbar-background {
  border-radius: var(--na-user-border-radius) !important;
}


.zen-toolbar-background {
  &, &::before, &::after {
    border-radius: var(--na-user-border-radius) !important;
  }
}

/* expanded docked sidebar LEFT side mode */
:root:not([zen-right-side])[zen-sidebar-expanded="true"][zen-compact-mode="true"] #titlebar {
  margin-left: 16px !important;
  margin-bottom: 32px !important;
  margin-top: 6px !important;
}

@media not (-moz-bool-pref: "zen.view.experimental-force-window-controls-left"){
  :root:not([zen-right-side])[zen-sidebar-expanded="true"][zen-compact-mode="true"] #titlebar {
    margin-left: 16px !important;
    margin-bottom: 6px !important;
    margin-top: 32px !important;
  }
}

/* === Border between sidebar and webview for nogaps mod */
@media (-moz-pref("wireframe.nogaps.enabled")){
    @media (-moz-pref("wireframe.nogaps.border.enabled")){
        :root:not([zen-right-side],[zen-compact-mode="true"])[zen-sidebar-expanded="true"] #zen-sidebar-splitter {
          border-right: 1px solid var(--na-color-border) !important;
        }

        :root:not([zen-compact-mode="true"])[zen-right-side][zen-sidebar-expanded="true"] #zen-sidebar-splitter {
          border-left: 1px solid var(--na-color-border) !important;
        }
    }
}

  /* expanded docked sidebar RIGHT side mode */
  :root[zen-right-side][zen-sidebar-expanded="true"][zen-compact-mode="true"] #titlebar {
    margin-right: 16px !important;
    margin-bottom: 32px !important;
    margin-top: 6px !important;
  }

@media not (-moz-bool-pref: "zen.view.experimental-force-window-controls-left"){
  :root[zen-right-side][zen-sidebar-expanded="true"][zen-compact-mode="true"] #titlebar {
    margin-right: 16px !important;
    margin-bottom: 32px !important;
    margin-top: 6px !important;
  }
}

@media not (-moz-bool-pref: "wireframe.urlbar.position.top"){
  /* expanded docked sidebar LEFT side mode */
  :root:not([zen-right-side])[zen-sidebar-expanded="true"][zen-compact-mode="true"] #titlebar {
    margin-left: 16px !important;
    margin-bottom: 32px !important;
    margin-top: 6px !important;
  }

  /* expanded docked sidebar RIGHT side mode */
  :root[zen-right-side][zen-sidebar-expanded="true"][zen-compact-mode="true"] #titlebar {
    margin-right: 16px !important;
    margin-bottom: 32px !important;
    margin-top: 6px !important;
  }
}

@media (-moz-pref("zen.view.use-single-toolbar")) {
  @media not (-moz-bool-pref: "wireframe.urlbar.position.top"){
    #zen-appcontent-navbar-wrapper::before {
      content: "";
      position: absolute;
      left: 0;
      right: 0;
      bottom: -10px;
      height: 20px; /* ← increases hover hitbox */
    }
  }



/*       :root:has(#customization-content-container:hover),
      :root:has(toolbarpaletteitem:active),
      :root:has(#zen-appcontent-navbar-container:hover),
      :root:has(.titlebar-buttonbox-container:hover),
      :root:has(.titlebar-button:hover),
      :root:has(#zen-appcontent-navbar-wrapper:hover) #zen-appcontent-navbar-wrapper {
        margin-block: 0px !important;
      }
 */
      :root[zen-sidebar-expanded="true"] {

      /* keep it visible if any of these areas are hovered / active */
/*       :root:has(#customization-content-container:hover),
      :root:has(toolbarpaletteitem:active),
      :root:has(#zen-appcontent-navbar-container:hover),
      :root:has(.titlebar-buttonbox-container:hover),
      :root:has(.titlebar-button:hover),
      :root:has(#zen-appcontent-navbar-wrapper:hover)
      #zen-appcontent-navbar-wrapper {
        opacity: 1 !important;
        transition-delay: 0s !important;
      } */

/*       :root:has(#customization-content-container:hover),
      :root:has(toolbarpaletteitem:active),
      :root:has(#zen-appcontent-navbar-container:hover),
      :root:has(.titlebar-buttonbox-container:hover),
      :root:has(.titlebar-button:hover),
      :root:has(#zen-appcontent-navbar-wrapper:hover) #zen-tabbox-wrapper {
        margin-bottom: 0px !important;
      } */

      /* optional: slightly longer hide delay if your mouse motions are fast */
      :root[zen-sidebar-expanded="true"] #zen-appcontent-navbar-wrapper[hidden="false"] {
        transition-delay: 0.18s;
      }
    }

    /* auto hide top sidebar toolbar ALONG WITH menu button */
  @media (-moz-pref("wireframe.toolbar.hide")){
    #zen-sidebar-top-buttons>#zen-sidebar-top-buttons-customization-target>* {
      opacity: 0 !important;
      transition: opacity var(--na-anim-duration) normal !important;
    }
    
    #nav-bar-overflow-button{
      opacity: 0 !important;
      transition: opacity var(--na-anim-duration) normal !important;
    }

    :has(#zen-sidebar-top-buttons:hover) #zen-sidebar-top-buttons-customization-target>* {
      opacity: 1 !important;
    }
    
    :has(#zen-sidebar-top-buttons:hover) #nav-bar-overflow-button{
      opacity: 1 !important;
    }
  }

    /* move sidebar navbar to bottom */

    [zen-compact-mode="true"] {
      /* sidebar margin on single-toolbar mode */
      #nav-bar {
        margin-bottom: 4px !important;
      }

      #navigator-toolbox {
        margin-bottom: 16px !important;
      }
    }
  }

/* === SIDEBAR - MULTIPLE TOOLBAR === */

  #tabbrowser-tabs,
  #TabsToolbar,
  #titlebar,
  #TabsToolbar-customization-target {
    flex-direction: column;
    height: 100%;
    margin-bottom: 2px !important; /* to match bottombar */
  }



/* reduced height of floating sidebar for multiple/collapse toolbar */
@media not (-moz-pref("zen.view.use-single-toolbar")) {
  :root[zen-compact-mode="true"] #navigator-toolbox {
    height: calc(100% - 48px) !important;
    align-self: center !important;
    margin-top: 20px !important;
    top: 0 !important;
  }
}
/* ... */

